--- a/src/main/res/layout/rent_date_fragment.xml
+++ b/src/main/res/layout/rent_date_fragment.xml
@@ -23,9 +23,15 @@
             android:id="@+id/title_rent_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_bold"
             android:text="Бронирование"
+            android:textSize="40sp"
+            android:textColor="@color/darkblue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
