--- a/src/main/res/layout/rent_date_fragment.xml
+++ b/src/main/res/layout/rent_date_fragment.xml
@@ -30,8 +30,86 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_rent_label"/>
+
+        <TextView
+            android:id="@+id/describe_label_1"
+            style="@style/DescribeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Помещение:"
+            app:layout_constraintStart_toStartOf="@+id/calendarView"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginVertical="6dp"
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/input_edittext_background"
+            android:padding="@dimen/base_padding"
+            android:outlineAmbientShadowColor="@color/black"
+            app:cardBackgroundColor="@color/blue4"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/calendarView"
+            app:layout_constraintStart_toStartOf="@+id/calendarView"
+            app:cardCornerRadius="60dp"
+            app:layout_constraintTop_toBottomOf="@id/describe_label_1">
+
+
+
+
+            <Spinner
+                android:id="@+id/spinner"
+                style="@style/SpinnerStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@color/blue4"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toEndOf="@+id/calendarView"
+                app:layout_constraintStart_toStartOf="@+id/calendarView"
+                app:layout_constraintTop_toBottomOf="@+id/describe_label_1" />
+
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/describe_label_2"
+            style="@style/DescribeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/vertical_margin"
+            android:text="Цель посещения:"
+            app:layout_constraintStart_toStartOf="@+id/describe_label_1"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/input_edittext_background"
+            android:gravity="center_vertical"
+            android:paddingLeft="24dp"
+            app:helperText="Ваша цель посещения"
+            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/cardView"
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@id/describe_label_2">
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
