--- a/app/src/main/res/layout/list_time.xml
+++ b/app/src/main/res/layout/list_time.xml
@@ -6,6 +6,8 @@
     android:background="@drawable/button_time_shape"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:padding="10dp">
 
     <TextView
@@ -13,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_bold"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="44sp"
         android:text="10:00 - 11:00"/>
