--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#00215A</color>
+    <color name="white4">#EAEBF8</color>
+    <color name="colorHintBlue">#6D72AF</color>
 </resources>
