--- a/app/src/main/res/layout/activity_booking1.xml
+++ b/app/src/main/res/layout/activity_booking1.xml
@@ -1,45 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BookingActivity1">
+    android:orientation="vertical"
+    android:padding="20dp">
 
-    <TextView
-        android:id="@+id/book_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginHorizontal="33dp"
-        android:layout_marginBottom="44dp"
-        android:fontFamily="@font/inter_bold"
-        android:text="Бронирование"
-        android:textColor="@color/blue"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@id/calendarView"
-        tools:layout_editor_absoluteX="60dp"></TextView>
-
-    <CalendarView
-        android:id="@+id/calendarView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="140dp"
-        app:layout_constraintTop_toBottomOf="@id/book_text"/>
+        android:layout_height="match_parent"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="23dp"
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="123dp" />
+        android:layout_marginBottom="20dp"
+        app:cardBackgroundColor="@color/blue"
+        app:cardCornerRadius="14dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Помещение"
-        android:fontFamily=""
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="409dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_nook_shape"
+            android:orientation="vertical"
+            android:padding="21dp">
+            >
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="62dp"
+                android:layout_marginEnd="62dp"
+                android:fontFamily="@font/inter_bold"
+                android:gravity="center"
+                android:text="Регистрация"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/Login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+
+                android:background="@drawable/button_time_shape"
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="Логин"
+                android:inputType="textEmailAddress"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/Initials"
+                android:layout_width="match_parent"
+                android:layout_height="47.3dp"
+                android:layout_marginTop="19dp"
+                android:background="@drawable/button_time_shape"
+
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="ФИО"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/Email"
+                android:layout_width="match_parent"
+                android:layout_height="47.3dp"
+                android:layout_marginTop="19dp"
+                android:background="@drawable/button_time_shape"
+
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="Email"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="21sp" />
+
+            <EditText
+                android:id="@+id/Password"
+                android:layout_width="match_parent"
+                android:layout_height="47.3dp"
+                android:layout_marginTop="17dp"
+                android:background="@drawable/button_time_shape"
+
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="Пароль"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/Institute"
+                android:layout_width="match_parent"
+                android:layout_height="47.3dp"
+                android:layout_marginTop="17dp"
+                android:background="@drawable/button_time_shape"
+
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="Институт"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/Phone"
+                android:layout_width="match_parent"
+                android:layout_height="47.3dp"
+                android:layout_marginTop="19dp"
+                android:background="@drawable/button_time_shape"
+
+                android:fontFamily="@font/inter_light"
+                android:gravity="center"
+                android:hint="Номер телефона"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColorHint="@color/black"
+                android:textSize="20sp" />
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonLogin"
+                android:layout_width="192dp"
+                android:layout_height="56dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_time_shape"
+                android:fontFamily="@font/inter_bold"
+                android:text="Регистрация"
+                android:textAllCaps="false"
+                android:textColor="@color/blue"
+
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textViewCreateAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="11dp"
+                android:fontFamily="@font/inter_medium"
+                android:text="Уже есть аккаунт? Ввойдите"
+                android:textColor="@color/white4"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
