--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,114 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         android:fontFamily="@font/inter_bold"
-        android:gravity="center_horizontal"
+        android:gravity="center|center_horizontal"
         android:text="Мой Дом"
         android:textColor="@color/blue"
-        android:textSize="48sp" />
+        android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="23dp"
-
-        android:layout_marginBottom="40dp"
+        android:id="@+id/cardView2"
+        android:layout_width="319dp"
+        android:layout_height="431dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         app:cardBackgroundColor="@color/blue"
-        app:cardCornerRadius="14dp">
+        app:cardCornerRadius="14dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_nook_shape"
-            android:orientation="vertical"
-            android:padding="21dp">
-            >
 
-            <!-- Следующие элементы вложены в LinearLayout -->
+            android:padding="21dp">
+
 
             <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/inter_bold"
+                android:gravity="center_horizontal"
+                android:text="Авторизация"
+                android:textColor="@color/white4"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editTextText7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="62dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginEnd="62dp"
-                android:fontFamily="@font/inter_bold"
-                android:gravity="center"
-                android:text="Авторизация"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/Login"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="50.3dp"
-
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="84dp"
                 android:background="@drawable/button_time_shape"
+
                 android:fontFamily="@font/inter_light"
+                android:gravity="center"
                 android:hint="Логин"
                 android:inputType="textEmailAddress"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:textColorHint="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/Password"
+                android:id="@+id/editTextText8"
                 android:layout_width="match_parent"
-                android:layout_height="50.3dp"
-                android:layout_marginTop="35dp"
-                android:gravity="center"
-
+                android:layout_height="wrap_content"
                 android:background="@drawable/button_time_shape"
+
                 android:fontFamily="@font/inter_light"
+                android:gravity="center"
                 android:hint="Пароль"
                 android:inputType="textPassword"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:textColorHint="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonLogin"
                 android:layout_width="192dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="44dp"
-                android:fontFamily="@font/inter_bold"
-                android:textSize="20sp"
+                android:layout_marginBottom="72dp"
                 android:background="@drawable/button_time_shape"
-                android:text="Войти"
+                android:fontFamily="@font/inter_bold"
 
-                android:textColor="@color/blue" />
+                android:text="Войти"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/textViewCreateAccount"
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_medium"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="23dp"
+                android:layout_marginBottom="24dp"
+                android:fontFamily="@font/inter_medium"
                 android:text="Создать аккаунт"
+
                 android:textColor="@color/white4"
-                android:textSize="14sp" />
-
-
-        </LinearLayout>
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
