--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#00215A</color>
     <color name="white4">#EAEBF8</color>
     <color name="colorHintBlue">#6D72AF</color>
+    <color name="textviewcolor">#858585</color>
 </resources>
