--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".BookingActivity2">
+    tools:context=".RentTimeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/time_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
@@ -22,7 +23,7 @@
         android:layout_marginEnd="68dp"
 
         android:layout_marginBottom="48dp"
-        android:background="@drawable/button_nook_shape"
+        android:background="@drawable/button_blue_shape"
         android:fontFamily="@font/inter_bold"
         android:text="Забронировать"
         android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>
