--- a/app/src/main/res/layout/info2.xml
+++ b/app/src/main/res/layout/info2.xml
@@ -87,6 +87,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/govor"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
