--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".LoginActivity">
 
 
     <TextView
@@ -11,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/inter_bold"
@@ -24,7 +24,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.406" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -111,7 +111,7 @@
                 android:layout_marginBottom="72dp"
                 android:background="@drawable/button_time_shape"
                 android:fontFamily="@font/inter_bold"
-
+                android:gravity="center"
                 android:text="Войти"
                 android:textColor="@color/blue"
                 android:textSize="20sp"
@@ -121,12 +121,12 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/create_accout_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="24dp"
-                android:fontFamily="@font/inter_medium"
+                android:fontFamily="@font/inter_bold"
                 android:text="Создать аккаунт"
 
                 android:textColor="@color/white4"
