--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-<<<<<<< HEAD
+
     <style name="Base.Theme.Rutdomandroid" parent="Theme.Material3.DayNight.NoActionBar">
-=======
-    <style name="Base.Theme.Rut_project" parent="Theme.Material3.DayNight.NoActionBar">
->>>>>>> feature/Bogdan
-        <!-- Customize your dark theme here. -->
+\        <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
